--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/alex-brush": "^0.2.3",
+    "@expo-google-fonts/dev": "^0.2.3",
     "expo": "~51.0.10",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~12.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1"
