--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/alex-brush": "^0.2.3",
     "@expo-google-fonts/dev": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-firebase/database": "^20.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.10",
     "expo-app-loading": "^2.1.1",
+    "expo-build-properties": "~0.12.2",
     "expo-font": "~12.0.6",
+    "expo-modules-autolinking": "^1.11.1",
     "expo-status-bar": "~1.12.1",
     "feather-icons": "^4.29.2",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
