--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-screen-orientation": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
