--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "~51.0.10",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.12.2",
     "expo-font": "~12.0.6",
     "expo-modules-autolinking": "^1.11.1",
+    "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "feather-icons": "^4.29.2",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0",
-    "expo-screen-orientation": "~7.0.5"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
