--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "uuid": "^10.0.0"
