--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/alex-brush": "^0.2.3",
     "@expo-google-fonts/dev": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/database": "^20.1.0",
@@ -26,6 +27,7 @@
     "expo-font": "~12.0.6",
     "expo-modules-autolinking": "^1.11.1",
     "expo-screen-orientation": "~7.0.5",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "feather-icons": "^4.29.2",
     "firebase": "^10.12.2",
